<resources>
    <string name="app_name" translatable="false">Vevericka</string>
    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_up_text">Don\'t have an account? Sign up</string>
    <string name="app_logo_description">App logo</string>
    <string name="login_help">Login Help</string>
    <string name="send_verification_email">Send verification email</string>
    <string name="help">Help</string>
    <string name="send">Send</string>
    <string name="send_password_reset_link">Send Password Reset Link</string>
    <string name="password_reset_sent_ok_msg">Password reset link sent</string>
    <string name="generic_err_msg">Failed</string>
    <string name="register_profile_picture">Register profile picture</string>
    <string name="register">Register</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="user_create_ok_msg">User created</string>
    <string name="login_err_msg">Cannot login</string>
    <string name="sign_out">Sign Out</string>
    <string name="login_help_text">Need Help?</string>
    <string name="fill_empty_fields">Fill empty fields</string>
    <string name="password_reset_info_text">Enter your email address. We will send you a link.</string>
    <string name="send_password_reset_email">Send email</string>
    <string name="title_profile">Profile</string>
    <string name="title_friends">Friends</string>
    <string name="verification_info_text">Before you use the application, you have to verify your email address. Please click the button below to send a verification email</string>
    <string name="verification_check">Check</string>
    <string name="verification_check_text">If you verified your email, click the button below</string>
    <string name="user_not_verified_msg">User is not verified</string>
    <string name="verification_email_send_ok_msg">Verification email sent</string>
    <string name="verification_email_send_err_msg">Verification email send failed</string>
    <string name="user_verified_ok_msg">User is verified</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="login_empty_field">Empty field</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_user_location">Location: %s</string>
    <string name="profile_user_website">Website: %s</string>
    <string name="profile_posts">Posts</string>
    <string name="profile_friends">Friends</string>
    <string name="post_item_profile_picture">Post item profile picture</string>
    <string name="post_item_image">Post item image</string>
    <string name="post_item_favorites_button">Post item favorites button</string>
    <string name="post_item_comments_button">Post item comments button</string>
    <string name="post_item_comments">%d comments</string>
    <string name="post_item_likes">%d likes</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="new_post">New Post</string>
    <string name="new_post_image">New Post Image</string>
    <string name="new_post_content_hint">Description</string>
    <string name="select_image">Select an image</string>
    <string name="post_detail">Comments</string>
    <string name="new_comment">New Comment</string>
    <string name="comment_dialog_new_comment">Comment</string>
    <string name="comment">Comment</string>
    <string name="person_item_profile_image">Person item profile image</string>
    <string name="friends_add_friend">Add friend</string>
    <string name="search_hint">Enter name or e-mail</string>
    <string name="title_search_user">Search User</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="friendship_request_profile_image">Friendship request profile image</string>
    <string name="friendship_request_approve">Approve</string>
    <string name="friendship_request_dismiss">Dismiss</string>
    <string name="friendship_requests">Friendship Requests</string>
</resources>
