<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/app_logo_description"
        android:maxWidth="128dp"
        android:maxHeight="128dp"
        android:minWidth="32dp"
        android:minHeight="32dp"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/loginAppName"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
        app:srcCompat="@drawable/ic_squirrel" />

    <TextView
        android:id="@+id/loginAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_name"
        android:textColor="@color/colorAppRed"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/loginLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/loginAppName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/loginEmailTextInput"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/colorAppRed"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordTextInput" />

    <ImageView
        android:id="@+id/loginHelpButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/login_help"
        android:src="@drawable/ic_outline_help_outline_red_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/loginHelpText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/loginLoginButton" />

    <TextView
        android:id="@+id/loginHelpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/login_help_text"
        android:textColor="@color/colorAppRed"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/loginHelpButton"
        app:layout_constraintEnd_toStartOf="@+id/vertical_end_guideline"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/loginHelpButton"
        app:layout_constraintTop_toTopOf="@id/loginHelpButton" />
</androidx.constraintlayout.widget.ConstraintLayout>