<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.verification.VerificationActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/verificationInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:maxEms="14"
        android:text="@string/verification_info_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/verificationSendButton"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/verificationSendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAppRed"
        android:text="@string/send_verification_email"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/verificationCheckText"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/verificationInfoText" />

    <TextView
        android:id="@+id/verificationCheckText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:maxEms="14"
        android:text="@string/verification_check_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/verificationCheckButton"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/verificationSendButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/verificationCheckButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAppRed"
        android:text="@string/verification_check"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/verificationCheckText" />

    <Button
        android:id="@+id/verificationSignOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_out"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorAppRed"
        app:layout_constraintEnd_toEndOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/verificationCheckButton" />


</androidx.constraintlayout.widget.ConstraintLayout>