<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="4dp"
    android:elevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="4dp">

        <ImageView
            android:id="@+id/friendshipRequestItemProfileImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/friendship_request_profile_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_squirrel" />

        <TextView
            android:id="@+id/friendshipRequestItemFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/friendshipRequestItemProfileImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="USER FULL NAME" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/friendshipRequestItemApproveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/friendship_request_approve"
            android:textSize="10sp"
            app:icon="@drawable/ic_round_check_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/friendshipRequestItemFullName"
            app:layout_constraintTop_toBottomOf="@id/friendshipRequestItemFullName" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/friendshipRequestItemDismissButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friendship_request_dismiss"
            android:textSize="10sp"
            app:icon="@drawable/ic_round_close_white_24dp"
            app:layout_constraintBottom_toBottomOf="@id/friendshipRequestItemApproveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/friendshipRequestItemApproveButton"
            app:layout_constraintTop_toTopOf="@id/friendshipRequestItemApproveButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>